Finished Video 7.2 tutorial

--- a/views/notFound.handlebars
+++ b/views/notFound.handlebars
@@ -4,7 +4,7 @@
   <title>Not Found</title>
 </head>
 <body>
-
+  <h1>404: The {{page}} page could not be found!!</h1>
     <!-- links or URLs are always GET resources as they are getting (retrieving) a resource -->
     <a href="/">Home</a> <br/>
     <img src="/assets/img/internet.png">
